# veritas

./: .gitignore  PRODUCTION.md  README.md
codeplain/: .gitignore  README.md  SUBMISSION.md
codeplain/bank-connectors/: config.yaml  pytest.ini  veritas-python-package-template.plain  veritas_bank_connectors.plain
codeplain/bank-connectors/scripts/: run_conformance_tests_python.sh  run_unittests_python.sh
codeplain/contract-clients/: config.yaml  veritas-typescript-package-template.plain  veritas_contract_clients.plain  vitest.config.ts
codeplain/contract-clients/scripts/: run_conformance_tests_typescript.sh  run_unittests_typescript.sh
contract/: openapi.md  schema.py  types.ts
controlplane/: .gitignore  Dockerfile  README.md  pyproject.toml
controlplane/controlplane/: __init__.py  crypto.py  state.py  store.py  transparency.py
controlplane/controlplane/server/: app.py
controlplane/tests/: conftest.py  test_enrollment_auth.py  test_events.py  test_governance.py  test_hardening.py  test_legacy_demo.py  test_production.py  test_rounds.py  test_transparency.py
core/: pyproject.toml
core/experiments/: federated_ensemble.py  federated_gnn.py  federated_realdata.py  flock_federation.py
core/server/: app.py
core/tests/: test_adversarial.py  test_aggregation.py  test_api.py  test_attack.py  test_commit.py  test_counters.py  test_data.py  test_dp.py  test_dp_accountant.py  test_embeddings.py  test_engine.py  test_ensemble.py  test_federated_gnn.py  test_fedgbdt.py  test_flock_adapter.py  test_gnn.py  test_gnn_benchmark.py  test_graph.py  test_live_ensemble.py  test_mlp.py  test_model.py  test_provenance.py  test_realdata.py  test_robust.py  test_secure_agg.py  test_sequence.py  test_text_features.py  test_vsa.py
core/veritas_core/: adversarial.py  aggregation.py  attack.py  commit.py  data.py  dp.py  dp_accountant.py  embeddings.py  engine.py  ensemble.py  fedgbdt.py  flock_adapter.py  gnn.py  gnn_benchmark.py  graph.py  live_ensemble.py  mlp.py  model.py  realdata.py  robust.py  secure_agg.py  sequence.py  sequence_data.py  text_features.py  vsa.py
deploy/: docker-compose.yml  e2e.py  e2e_race.py  run_local.sh
docs/: RECORDING.md  deck.md  demo-runbook.md  demo-runtime-flow.excalidraw  demo-script.md  deployment-runbook-production.md  dpia-template.md  federated-round-flow.excalidraw  model-architecture.md  outreach.md  pitch.md  security-pack.md
docs/diagrams/: README.md
docs/diagrams/excalidraw/: 01-tech-stack.excalidraw  02-production-architecture.excalidraw  03-federated-round-flow.excalidraw  04-data-sovereignty-boundaries.excalidraw  05-demo-runtime-flow.excalidraw  06-threat-and-governance-flow.excalidraw  07-bank-onboarding-deployment.excalidraw  README.md
docs/superpowers/plans/: 2026-06-20-gnn-backed-wow-demo.md  2026-06-20-massive-contagion-wow.md  2026-06-20-veritas-production-build.md  2026-06-20-veritas.md
docs/superpowers/specs/: 2026-06-20-gnn-backed-wow-demo-design.md  2026-06-20-massive-contagion-wow-design.md  2026-06-20-veritas-design.md  2026-06-20-veritas-production-architecture.md
edge-sdk/: README.md  package-lock.json  package.json  tsconfig.json
edge-sdk/demo/: demo.ts
edge-sdk/src/: dp.ts  events.ts  index.ts  model.ts  rng.ts  scam.ts  secureAgg.ts  transport.ts  veritas.ts
edge-sdk/test/: dp.test.ts  fakeNode.ts  model.test.ts  secureAgg.test.ts  veritas.test.ts
landing/: index.html
landing/demo/: index.html
landing/demo/assets/: index-BlxCZ6q2.js  index-BsAQmw62.js  index-Bv6wa_rr.css  index-CFQm9QC8.css
landing/demo/viz/: gbdt.json  umap.json
landing/showcase/: index.html  package-lock.json  package.json  vite.config.ts
landing/showcase/src/: App.tsx  index.css
landing/showcase/src/components/: EmbeddingAtlas.tsx  EnsembleStack.tsx  FederatedGbdt.tsx  FederationPulse.tsx  (+4 more)
mock/: gnnBenchmark.js  package-lock.json  package.json  scenario.js  server.js
node/: Dockerfile  README.md  pyproject.toml
node/node/: __init__.py  __main__.py  attestation.py  config.py  engine.py  identity.py  live_ensemble.py  predict_features.py  runtime.py
node/node/connectors/: __init__.py  feature_map.py  runtime.py
node/node/federation/: __init__.py  client.py  transport.py
node/node/server/: __init__.py  app.py
node/sample_data/: feature_map.yaml  feature_map_iso20022.yaml  pacs008_sample.xml  transactions.csv
node/tests/: fake_plane.py  test_api.py  test_connector.py  test_demo_control.py  test_federation.py  test_plane_auth_integration.py  test_secure_agg.py  test_training.py
protocol/: PROTOCOL.md
signalbot/: README.md  pyproject.toml  signals.yaml
signalbot/reports/: 2026-06-20.md
signalbot/signalbot/: __init__.py  cli.py  config.py  http.py  models.py  pipeline.py  report.py  scoring.py
signalbot/signalbot/sources/: __init__.py  base.py  conftalks.py  forums.py  hackernews.py  jobs.py  linkedin.py  reddit.py
signalbot/tests/: test_pipeline.py  test_scoring.py  test_sources.py
tests/: test_codeplain_submission.py
tools/: gen_demo_viz.py  gen_dp_viz.py  gen_ensemble_viz.py  gen_gbdt_viz.py  gen_sequence_viz.py  gen_vsa_viz.py
web/: package-lock.json  package.json
web/public/viz/: dp.json  ensemble.json  federation.json  graph.json  sequence.json  umap.json  vsa.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: AttackBanner.tsx  BankStrip.tsx  Controls.tsx  EdgeFleetPanel.tsx  EmbeddingAtlas.tsx  EnsembleStack.tsx  FederatedGbdt.tsx  FederationPulse.tsx  GovernancePanel.tsx  HeroCounters.tsx  Inspector.tsx  MassiveContagionStage.tsx  MuleGraph.tsx  PopulationCanvas.tsx  PrivacyBadge.tsx  PrivacyBudget.tsx  ProvenancePanel.tsx  RacePanel.tsx  SequenceTimeline.tsx  TechnicalProofStrip.tsx  ZkProof.tsx
web/src/lib/: api.ts  contagion.test.ts  contagion.ts  controlPlaneStore.tsx  controlplane-types.ts  controlplane.ts  derive.ts  format.ts  gnnTelemetry.test.ts  gnnTelemetry.ts  store.tsx  types.ts  useCountUp.ts  useEvents.ts
(+5 files in other folders)
