[project]
name = "veritas-controlplane"
version = "0.1.0"
description = "Veritas Tier 2 Federation Control Plane"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "pydantic>=2.7",
    "cryptography>=42.0",
    "pyjwt[crypto]>=2.8",
    "numpy>=2.1",
    # The control plane REUSES the federated-learning primitives (robust
    # aggregation, DP accounting, the model) from veritas-core — it is a hard
    # runtime dependency, declared here so the package is independently
    # installable (resolved from the monorepo via [tool.uv.sources] below, or
    # `pip install -e ../core`).
    "veritas-core",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27"]

# Resolve the local monorepo dependency on veritas-core from the sibling
# checkout when installing with uv (`uv pip install -e .`). With plain pip,
# install core editable first: `pip install -e ../core`.
[tool.uv.sources]
veritas-core = { path = "../core", editable = true }

[tool.setuptools.packages.find]
include = ["controlplane*"]

[tool.pytest.ini_options]
# Repo root added so `import controlplane...` resolves; core is installed
# editable (pip install -e ../core) so `from veritas_core...` works the
# same way it does in core/server/app.py.
pythonpath = ["."]
addopts = "-q"
