[project]
name="veritas-core"
version="0.1.0"
requires-python=">=3.11"
dependencies=["numpy>=2.1","fastapi>=0.111","uvicorn[standard]>=0.30","sse-starlette>=2.1","pydantic>=2.7"]
[project.optional-dependencies]
dev=["pytest>=8.2","httpx>=0.27"]
flock=["flock-sdk"]
[tool.setuptools]
packages=["veritas_core","server"]
[tool.pytest.ini_options]
pythonpath=["."]
