[project]
name = "veritas-signalbot"
version = "0.1.0"
description = "Problem-signal scraper — hunts Reddit, industry forums, LinkedIn, conference talks and job descriptions for real-world evidence of the problem Veritas claims to solve (cross-institution fraud-intelligence sharing blocked by privacy)."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
signalbot = "signalbot.cli:main"

[tool.setuptools]
packages = ["signalbot", "signalbot.sources"]

[tool.pytest.ini_options]
pythonpath = ["."]
